ok: Update e11bio-prism.yaml
adding tag aws-pds

--- a/datasets/e11bio-prism.yaml
+++ b/datasets/e11bio-prism.yaml
@@ -41,6 +41,7 @@ Tags:
   - protein
   - segmentation
   - zarr
+  - aws-pds
 License: https://e11.bio/terms-of-use
 Resources:
   - Description: Data files in a public bucket
