--- a/datasets/1000-genomes.yaml
+++ b/datasets/1000-genomes.yaml
@@ -19,8 +19,8 @@ Resources:
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-  - Title: Download VCFs
-    Description: To do the most basic thing you can imagine, do this, for example: `aws s3 cp --no-sign-request s3://1000genomes/1000G_2504_high_coverage/working/20201028_3202_raw_GT_with_annot/20201028_CCDG_14151_B01_GRM_WGS_2020-08-05_chrY.recalibrated_variants.vcf.gz`. Change chrY to whatever you want, and add .tbi if you like.
+  - Title: How to download VCFs
+    Description: To download a VCF to your current directory, do this, for example: "aws s3 cp --no-sign-request s3://1000genomes/1000G_2504_high_coverage/working/20201028_3202_raw_GT_with_annot/20201028_CCDG_14151_B01_GRM_WGS_2020-08-05_chrY.recalibrated_variants.vcf.gz . ". Change chrY to whatever you want, and add .tbi if you'd like.
   Tools & Applications:
     - Title: Examine genomic variation across populations with AWS
       URL: https://aws.amazon.com/blogs/industries/examine-genomic-variation-across-populations-with-aws/
