--- a/datasets/pdb-3d-structural-biology-data.yaml
+++ b/datasets/pdb-3d-structural-biology-data.yaml
@@ -11,7 +11,9 @@ Description: >
   Electron Microscopy Data Bank (wwPDB-designated Archive Keeper: EMDB)
 
   Biological Magnetic Resonance Bank (wwPDB-designated Archive Keeper: BMRB)
-Documentation: https://www.wwpdb.org/documentation/file-format
+Documentation:
+  - https://www.wwpdb.org/documentation/file-format
+  - https://www.rcsb.org/docs/programmatic-access/file-download-services
 Contact: https://www.wwpdb.org/about/contact
 ManagedBy: "[Worldwide Protein Data Bank Partnership](wwpdb.org)"
 UpdateFrequency: |
@@ -61,3 +63,11 @@ DataAtWork:
     - Title: "Protein Data Bank: the single global archive for 3D macromolecular structure data"
       URL: https://doi.org/10.1093/nar/gky949
       AuthorName: wwPDB consortium
+  Tutorials:
+    - Title: "Get to Know a Dataset: Protein Data Bank 3D Structural Biology Data"
+      URL: https://github.com/rcsb/AWS-Open_Data_Registry/blob/master/PDB_3D_Dataset_Tour.ipynb
+      AuthorName: RCSB PDB
+      AuthorURL: https://rcsb.org/
+    - Title: "PDB 101"
+      URL: https://pdb101.rcsb.org/
+      
