ok: Update pdb-3d-structural-biology-data.yaml
Moving the second doc link to tutorials

--- a/datasets/pdb-3d-structural-biology-data.yaml
+++ b/datasets/pdb-3d-structural-biology-data.yaml
@@ -11,9 +11,7 @@ Description: >
   Electron Microscopy Data Bank (wwPDB-designated Archive Keeper: EMDB)
 
   Biological Magnetic Resonance Bank (wwPDB-designated Archive Keeper: BMRB)
-Documentation:
-  - https://www.wwpdb.org/documentation/file-format
-  - https://www.rcsb.org/docs/programmatic-access/file-download-services
+Documentation: "https://www.wwpdb.org/documentation/file-format"
 Contact: https://www.wwpdb.org/about/contact
 ManagedBy: "[Worldwide Protein Data Bank Partnership](wwpdb.org)"
 UpdateFrequency: |
@@ -63,6 +61,12 @@ DataAtWork:
       AuthorURL: https://rcsb.org/
     - Title: "PDB 101"
       URL: https://pdb101.rcsb.org/
+      AuthorName: RCSB PDB
+      AuthorURL: https://rcsb.org/
+    - Title: "File Download Services"
+      URL: https://www.rcsb.org/docs/programmatic-access/file-download-services
+      AuthorName: RCSB PDB
+      AuthorURL: https://rcsb.org/
   Publications:
     - Title: "Announcing the worldwide Protein Data Bank"
       URL: https://doi.org/10.1038/nsb1203-980
