--- a/datasets/ncbi-pmc.yaml
+++ b/datasets/ncbi-pmc.yaml
@@ -9,7 +9,7 @@ These datasets collectively span more than half of PMC's total collection of ful
 Contact: pubmedcentral@ncbi.nlm.nih.gov
 Documentation: https://www.ncbi.nlm.nih.gov/pmc/tools/pmcaws
 ManagedBy: "[National Library of Medicine (NLM)](http://nlm.nih.gov/)"
-UpdateFrequency: Continuous - article versions are updated continuously. Updates include: the addition of new article versions; the update of one or more objects belonging to an existing article version; in rare cases, the removal of an article version
+UpdateFrequency: Continuous - article versions are updated continuously. Updates include - the addition of new article versions; the update of one or more objects belonging to an existing article version; in rare cases, the removal of an article version
 Tags:
   - aws-pds
   - life sciences
